# siteshot

./: .gitignore  README.md  cleanup.ps1  cli.spec  pyproject.toml  siteshot.spec
Release-Notes/: Release-v1.0.0.md  Release-v1.0.1.md
install/: install.ps1  install.sh
siteshot/: cli.py  crawl.py  runner.py
siteshot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
