[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siteshot"
version = "1.0.0"
description = "Website visual QA crawler using Playwright"
authors = [{ name="SiteShot Team" }]
requires-python = ">=3.9"

dependencies = [
    "playwright",
    "aiohttp",
    "lxml",
    "openpyxl"
]

[project.scripts]
siteshot = "siteshot.cli:main"
